# customer-churn-mlops

./: pyproject.toml
data-pipeline/data/processed/: df_processed.csv.dvc
data-pipeline/scripts/: processing+EDA.ipynb
infra/docker/: README.md
infra/docker/monitor/: docker-compose.yaml
serving_pipeline/: pre_processing.py
