[project]
name = "customer-churn-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.66.1",
    "dvc-s3>=3.2.2",
    "feast[redis]>=0.58.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
